--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "auto-hide-files",
   "main": "./lib/auto-hide-files",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Automatically hides specified files and folders in the project tree",
-  "keywords": [
-  ],
+  "keywords": [],
   "repository": "https://github.com/JackTheFoxOtter/atom-auto-hide-files",
   "license": "MIT",
   "engines": {
